--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/cli": "^2.0.0-beta.5",
+    "@prisma/client": "^2.0.0-beta.5",
     "@types/node": "^14.0.4",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
